--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-react-views": "^0.11.0",
+    "method-override": "^3.0.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   }
 }
